# attractor

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/commands/: dev.md  install.md
.claude/scripts/: dev.sh  install.sh
docs/: index.md
docs/explanation/: architecture.md
docs/how-to/: common-tasks.md
docs/reference/: api-reference.md
docs/tutorials/: getting-started.md
specs/: context-fidelity.md  interviewer-protocol.md  run-directory.md  secondary-review-issues.md  status-file-contract.md
specs/gaps/: gap-analysis-2026-02-21.md  gap-analysis-2026-02-22.md  gap-analysis-2026-02-23.md  gap-analysis-2026-02-24.md
src/attractor/: __init__.py  cli.py
src/attractor/agent/: CLAUDE.md  __init__.py  environment.py  events.py  loop.py  loop_detection.py  prompts.py  session.py  truncation.py  turns.py
tests/: CLAUDE.md  conftest.py
tests/agent/: test_apply_patch.py  test_environment.py  test_loop.py  test_loop_detection.py  test_profiles.py  test_session.py  test_smoke_agent.py  test_subagent.py  test_tools.py  test_truncation.py  test_turns.py
tests/llm/: test_adapters.py  test_catalog.py  test_client.py  test_error_translation.py  test_errors.py  test_models.py  test_smoke_llm.py  test_smoke_providers.py  test_streaming.py  test_tool_choice.py
tests/pipeline/: test_artifact_store.py  test_conditions.py  test_context.py  test_engine.py  test_goals.py  test_handlers.py  test_interviewer.py  test_parser.py  test_server.py  test_smoke_pipeline.py  test_state.py  test_stylesheet.py  test_transforms.py  test_validator.py
(+39 files in other folders)
