[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "attractor"
version = "0.1.0"
description = "A non-interactive coding agent for use in software factories"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "openai>=1.50.0",
    "anthropic>=0.40.0",
    "google-genai>=1.0.0",
    "pydantic>=2.0.0",
    "pydot>=3.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "anyio>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
]

[project.scripts]
attractor = "attractor.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/attractor"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
